--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,15 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Marhey:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,600;1,700;1,800&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background: #DCDEE2;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
+
 
 * {
   box-sizing: border-box;
