--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,11 +10,15 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background: #DCDEE2;
+    background: #FDFDFD;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  
+
 }
 
+html{
+  scroll-behavior: smooth;
+}
 a {
   color: inherit;
   text-decoration: none;
