work layout complete

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,13 +8,12 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Poppins;
     background: #FDFDFD;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  
-    cursor:none;
-
+    height:100vh;
+    
 }
 
 html{
@@ -42,11 +41,30 @@ opacity:1 !important;
 .text-hide{
 opacity:0 ;
 }
-.cursor{
-     
-
-}
-.outter{
+.App {
+  width: 85vw;
+  height: 100vh;
+  overflow: hidden;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
  
+}
 
+.row {
+  position: relative;
+}
+
+.container {
+  position: absolute;
+  width: 60vw;
+  height: 90vh;
+  overflow: hidden;
+  top: -45vh;
+}
+.container > img {
+  height: auto;
+  width:100%;
 }
