--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  
     height:100vh;
+    font-family:Poppins;
     
 }
 
