--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,11 +9,12 @@ body {
   padding: 0;
   margin: 0;
   font-family: Poppins;
-    background: #FDFDFD;
+    background: #EFF1F3;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  
     height:100vh;
     font-family:Poppins;
+    
     
 }
 
@@ -68,4 +69,32 @@ opacity:0 ;
 .container > img {
   height: auto;
   width:100%;
+}
+.bg-animation{
+ position:fixed;
+ background:#EFF1F3;
+ overflow:auto;
+ animation: bg-animation .2s infinite;
+
+
+}
+
+.bg-animation::after{
+ 
+
+ 
+
+}
+
+@keyframes grain {
+  0%, 100% { transform:translate(0, 0) }
+  10% { transform:translate(-5%, -10%) }
+  20% { transform:translate(-15%, 5%) }
+  30% { transform:translate(7%, -25%) }
+  40% { transform:translate(-5%, 25%) }
+  50% { transform:translate(-15%, 10%) }
+  60% { transform:translate(15%, 0%) }
+  70% { transform:translate(0%, 15%) }
+  80% { transform:translate(3%, 35%) }
+  90% { transform:translate(-10%, 10%) }
 }
